<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/sorting"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/sorting">
        <menu>
            <item
                android:id="@+id/sort_alf_asc"
                android:icon="@drawable/sort_alf_asc"
                android:orderInCategory="10"
                android:showAsAction="withText|ifRoom"
                android:title="@string/sort_alf_asc"/>
            <item
                android:id="@+id/sort_alf_desc"
                android:icon="@drawable/sort_alf_desc"
                android:orderInCategory="10"
                android:showAsAction="withText|ifRoom"
                android:title="@string/sort_alf_desc"/>
            <item
                android:id="@+id/sort_rate_asc"
                android:icon="@drawable/sort_rate_asc"
                android:orderInCategory="10"
                android:showAsAction="withText|ifRoom"
                android:title="@string/sort_rate_asc"/>
            <item
                android:id="@+id/sort_rate_desc"
                android:icon="@drawable/sort_rate_desc"
                android:orderInCategory="10"
                android:showAsAction="withText|ifRoom"
                android:title="@string/sort_rate_desc"/>
            
        </menu>
    </item>
</menu>
